<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Halfsies</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="reminder">Reminder name</string>
    <string name="done">Done</string>
    <string name="done2">Done2</string>
    <string name="label_items">Items</string>
    <string name="label_0.00">0.00</string>
    <string name="label_itemCost">Cost</string>
    <string name="label_dollarsign">$</string>
    <string name="label_itemName">Item Name</string>
    <string name="label_newItem">New Item</string>
    <string name="label_guestName">Diner 1</string>
    <string name="label_addItem">Add Item</string>
    <string name="label_ok">OK</string>
    <string name="label_calculate">Calculate</string>
    <string name="label_clear">Clear</string>
    <string name="label_subtotal">SubTotal:  </string>
    <string name="label_total">Total:  </string>
    <string name="label_grandTotal">Grand Total:  </string>
    <string name="label_tax">Tax:  </string>
    <string name="label_tip">Tip:  </string>
    <string name="label_taxp">Tax %:  </string>
    <string name="label_tipp">Tip %:  </string>

    <string-array name="times_array">
        <item>one</item>
        <item>two</item>
    </string-array>
    <string-array name="dates_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
    </string-array>

    <string name="title_activity_add_items">add_items</string>
    <string name="title_activity_add_items_prompt">AddItemsPrompt</string>
    <string name="title_activity_diner_add_items">DinerAddItems</string>
    <string name="title_activity_main_page">MainPage</string>

</resources>
